Fixes starting tmux configuration.

--- a/hermes/tmux.conf
+++ b/hermes/tmux.conf
@@ -1,4 +1,4 @@
-set-option -g default-command "reattach-to-user-namespace -l fish; cd ."
+set-option -g default-command "reattach-to-user-namespace -l bash; cd ."
 set -g default-terminal "screen-256color"
 set -g history-limit 20000
 # use VI
