--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,12 @@
 [submodule "vim/bundle/tComment.git"]
 	path = vim/bundle/tComment.git
 	url = https://github.com/vim-scripts/tComment.git
+[submodule "vim/bundle/vim-unimpaired"]
+	path = vim/bundle/vim-unimpaired
+	url = https://github.com/tpope/vim-unimpaired
+[submodule "vim/bundle/vim-textobj-rubyblock"]
+	path = vim/bundle/vim-textobj-rubyblock
+	url = https://github.com/nelstrom/vim-textobj-rubyblock
+[submodule "vim/bundle/vim-textobj-user"]
+	path = vim/bundle/vim-textobj-user
+	url = https://github.com/kana/vim-textobj-user
