Adds full Vim customization.

--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "hermes/vim/bundle/vim-fugitive"]
 	path = hermes/vim/bundle/vim-fugitive
 	url = https://github.com/tpope/vim-fugitive
+[submodule "hermes/vim/bundle/nerdtree"]
+	path = hermes/vim/bundle/nerdtree
+	url = https://github.com/scrooloose/nerdtree
