Adds Hermes Tmux theme.
- Includes battery scripts (added to ~/.hermes/bin)
- Adds relevant PATH config to Bash and Fish
- Adds theme file to ~/.tmux

--- a/hermes/tmux.conf
+++ b/hermes/tmux.conf
@@ -83,3 +83,6 @@ set -g mouse-select-pane on
 set-window-option -g mode-mouse on
 set -g base-index 1
 set -s escape-time 0
+
+# Source the hermes tmux theme
+source ~/.tmux/hermes.tmux
