--- a/hermes/tmux.conf
+++ b/hermes/tmux.conf
@@ -85,4 +85,4 @@ set -g base-index 1
 set -s escape-time 0
 
 # Source the hermes tmux theme
-source ~/.tmux/hermes.tmux
+source ~/.hermes/tmux/hermes.tmux
