--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "hermes/vim/bundle/vim-javascript"]
 	path = hermes/vim/bundle/vim-javascript
 	url = https://github.com/pangloss/vim-javascript
+[submodule "hermes/vim/bundle/vim-markdown"]
+	path = hermes/vim/bundle/vim-markdown
+	url = git://github.com/tpope/vim-markdown.git
