--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "hermes/vim/bundle/vim-javascript"]
 	path = hermes/vim/bundle/vim-javascript
 	url = https://github.com/pangloss/vim-javascript
+[submodule "hermes/vim/bundle/vim-coffee-script"]
+	path = hermes/vim/bundle/vim-coffee-script
+	url = git://github.com/kchmck/vim-coffee-script.git
