Tmux aggressive window resizing.
Signed-off-by: Claudio Ortolina <claudio@jumpzero.com>

--- a/hermes/tmux.conf
+++ b/hermes/tmux.conf
@@ -22,6 +22,9 @@ bind k confirm-before "kill-window"
 unbind ^x
 bind ^x kill-pane
 
+# window resize
+set-window-option -g aggressive-resize on
+
 # reload config
 unbind r
 bind r source-file ~/.tmux.conf
