--- a/.gitmodules
+++ b/.gitmodules
@@ -79,3 +79,6 @@
 [submodule "hermes/vim/bundle/vim-bundler"]
 	path = hermes/vim/bundle/vim-bundler
 	url = https://github.com/tpope/vim-bundler
+[submodule "hermes/vim/bundle/tagbar"]
+	path = hermes/vim/bundle/tagbar
+	url = https://github.com/majutsushi/tagbar
