Updates Tmux conf for Tmux 1.8
- Uses native zoom pane feature
- Uses native copy-pipe functionality

--- a/hermes/tmux.conf
+++ b/hermes/tmux.conf
@@ -43,7 +43,7 @@ bind _ split-window
 
 # Zoom
 unbind z
-bind z run ". ~/.hermes/hermes/tmux/zoom"
+bind z resize-pane -Z
 
 # tile all windows
 unbind =
@@ -78,7 +78,7 @@ unbind p
 bind p paste-buffer
 
 bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
+bind -t vi-copy 'y' copy-pipe "pbcopy"
 
 set-option -g status on
 set-option -g status-interval 1
