Adds tmux commands to:
- toggle rectangle selection
- automatic pane renumbering

--- a/hermes/tmux.conf
+++ b/hermes/tmux.conf
@@ -78,6 +78,7 @@ unbind p
 bind p paste-buffer
 
 bind -t vi-copy 'v' begin-selection
+bind -t vi-copy 'V' rectangle-toggle
 bind -t vi-copy 'y' copy-pipe "pbcopy"
 
 set-option -g status on
@@ -92,6 +93,7 @@ set -g mouse-resize-pane on
 set -g mouse-select-pane on
 set-window-option -g mode-mouse on
 set -g base-index 1
+set -g renumber-windows on
 set -s escape-time 0
 
 # Source the hermes tmux theme
