Pressing enter in copy mode pipes to paste buffer.

--- a/hermes/tmux.conf
+++ b/hermes/tmux.conf
@@ -81,6 +81,9 @@ bind -t vi-copy 'v' begin-selection
 bind -t vi-copy 'V' rectangle-toggle
 bind -t vi-copy 'y' copy-pipe "pbcopy"
 
+unbind -t vi-copy Enter
+bind -t vi-copy Enter copy-pipe "pbcopy"
+
 set-option -g status on
 set-option -g status-interval 1
 set-option -g status-utf8 on
