Sets terminal window title through Tmux.

--- a/hermes/tmux.conf
+++ b/hermes/tmux.conf
@@ -1,6 +1,9 @@
 set-option -g default-command "reattach-to-user-namespace -l $SHELL; cd ."
 set -g default-terminal "screen-256color"
 set -g history-limit 20000
+set -g set-titles on
+set -g set-titles-string "#W"
+
 # use VI
 set-window-option -g mode-keys vi
 
