Setups dynamic configuration options.

--- a/hermes/tmux.conf
+++ b/hermes/tmux.conf
@@ -103,4 +103,4 @@ set -g renumber-windows on
 set -s escape-time 0
 
 # Source the hermes tmux theme
-source ~/.hermes/hermes/tmux/hermes.tmux
+source $HERMES_PATH/hermes/tmux/hermes.tmux
