--- a/hermes/tmux.conf
+++ b/hermes/tmux.conf
@@ -1,4 +1,3 @@
-set-option -g default-command "reattach-to-user-namespace -l $SHELL; cd ."
 set -g default-terminal "screen-256color"
 set -g history-limit 20000
 set -g set-titles on
@@ -82,10 +81,10 @@ bind p paste-buffer
 
 bind -t vi-copy 'v' begin-selection
 bind -t vi-copy 'V' rectangle-toggle
-bind -t vi-copy 'y' copy-pipe "pbcopy"
+bind -t vi-copy 'y' copy-pipe "reattach-to-user-namespace pbcopy"
 
 unbind -t vi-copy Enter
-bind -t vi-copy Enter copy-pipe "pbcopy"
+bind -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 set-option -g status on
 set-option -g status-interval 1
