--- a/hermes/tmux.conf
+++ b/hermes/tmux.conf
@@ -1,3 +1,4 @@
+set-option -g default-command "reattach-to-user-namespace -l $SHELL; cd ."
 set -g default-terminal "screen-256color"
 set -g history-limit 20000
 set -g set-titles on
